# xclippipe

./: CMakeLists.txt  INSTALL  LICENSE  README  build  motif_window_hints.h  xclippipe.c
cmake/modules/: FindXCB.cmake
contrib/: CMakeLists.txt  xclippipe_recv  xclippipe_recv.pl  xclippipe_recv.sh
src/: CMakeLists.txt  actions.c  global.c  init.c  options.c  util.c  xclippipe.c
src/inc/: xcp_actions.h  xcp_global.h  xcp_init.h  xcp_motif_window_hints.h  xcp_options.h  xcp_util.h  xcp_xclippipe.h
